--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin-left: 15%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#changed-data {
+  background-color: aqua;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table {
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 1200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  overflow: hidden;
 }
